# PathFinder

./: CMakeLists.txt  Makefile  islands  pathfinder
inc/: pathfinder.h
libmx/inc/: libmx.h
libmx/src/: mx_atoi.c  mx_del_not_alphabet.c  mx_del_strarr.c  mx_in_alphabet.c  mx_memcpy.c  mx_read_one_line.c  mx_realloc.c  mx_strcmp.c  mx_strdel.c  mx_strlen.c  mx_strncpy.c  mx_strnew.c  mx_strsplit.c
src/errors/: mx_big_name.c  mx_error_dup_bridges.c  mx_error_file_invalid.c  mx_error_file_invalid_2.c  mx_error_file_or_dir.c  mx_errors_isl.c  mx_errors_islands.c  mx_errors_main.c  mx_len_of_bridges.c
src/main/: main.c
src/matrix/: mx_backtrack_int.c  mx_city_to_arr.c  mx_del_dup.c  mx_find_path.c  mx_int_algoritm.c  mx_int_matrix.c  mx_int_string.c
